@@ -1,3 +1,7 @@
+2007-07-19  Behdad Esfahbod  <behdad@gnome.org>
+
+	* glib/glib-sections.txt:
+
 2007-07-12  Matthias Clasen  <mclasen@redhat.com>
 
 	* === Released 2.13.7 ===
